--- a/typescript/01-intro/examples/03-samples/package.json
+++ b/typescript/01-intro/examples/03-samples/package.json
@@ -7,7 +7,7 @@
     "start": "tsc -w"
   },
   "keywords": [],
-  "author": "",
+  "author": "Computer Science Department ChNU",
   "license": "ISC",
   "devDependencies": {
     "typescript": "^5.5.4"
